--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Page Title</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>New IBM Site</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <h2>Aman Kumar</h2>
-    <p>
-        Default code has been
-        loaded into the Editor.
-    </p>
-</body>
+  <header class="navbar">
+    <div class="logo">IBM</div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Solutions</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <section class="hero">
+    <h1>Welcome to the Future of Tech</h1>
+    <p>Discover the next evolution in enterprise solutions.</p>
+    <a href="#" class="cta-button">Learn More</a>
+  </section>
+
+  <section class="features">
+    <div class="feature">
+      <h2>AI-Powered</h2>
+      <p>Leverage IBM Watson to unlock intelligent insights.</p>
+    </div>
+    <div class="feature">
+      <h2>Cloud-Native</h2>
+      <p>Scalable and secure platforms built for the cloud era.</p>
+    </div>
+    <div class="feature">
+      <h2>Open & Secure</h2>
+      <p>Built on open standards with enterprise-grade security.</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 IBM Corporation</p>
+    <p>Designed by Aman</p>
+  </footer>
+</body>
 </html>
