--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>New IBM Site</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>IBM Site v1.1</title>
+  <link rel="stylesheet" href="../style.css" />
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,9 +20,9 @@
   </header>
 
   <section class="hero">
-    <h1>Welcome to the Future of Tech</h1>
-    <p>Discover the next evolution in enterprise solutions.</p>
-    <a href="#" class="cta-button">Learn More</a>
+    <h1>IBM Site Version 1.1</h1>
+    <p>First iteration of our minimalist design.</p>
+    <a href="#" class="cta-button">Explore</a>
   </section>
 
   <section class="features">
