--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
       </ul>
     </nav>
   </header>
+  <div class="version-switcher">
+  <label for="version-select">Version:</label>
+  <select id="version-select" onchange="location = this.value;">
+    <option value="https://aman-1923.github.io/github-pages/">Main</option>
+    <option value="https://aman-1923.github.io/github-pages-v1.1/">v1.1</option>
+    <option value="https://aman-1923.github.io/github-pages-v1.2/">v1.2</option>
+    <option value="https://aman-1923.github.io/github-pages-v1.3/">v1.3</option>
+  </select>
+</div>
 
   <section class="hero">
     <h1>IBM Site Version 1.2</h1>
@@ -44,5 +53,15 @@
     <p>&copy; 2025 IBM Corporation</p>
     <p>Designed by Aman</p>
   </footer>
+  <script>
+  const select = document.getElementById('version-select');
+  const hostname = window.location.href;
+
+  if (hostname.includes("github-pages-v1.1")) select.value = "https://aman-1923.github.io/github-pages-v1.1/";
+  else if (hostname.includes("github-pages-v1.2")) select.value = "https://aman-1923.github.io/github-pages-v1.2/";
+  else if (hostname.includes("github-pages-v1.3")) select.value = "https://aman-1923.github.io/github-pages-v1.3/";
+  else select.value = "https://aman-1923.github.io/github-pages/";
+</script>
+
 </body>
 </html>
