--- a/v1.3/index.html
+++ b/v1.3/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IBM Site v1.3</title>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -21,10 +21,10 @@
   <div class="version-switcher">
   <label for="version-select">Version:</label>
   <select id="version-select" onchange="location = this.value;">
-    <option value="https://aman-1923.github.io/github-pages/">Main</option>
-    <option value="https://aman-1923.github.io/github-pages-v1.1/">v1.1</option>
-    <option value="https://aman-1923.github.io/github-pages-v1.2/">v1.2</option>
-    <option value="https://aman-1923.github.io/github-pages-v1.3/">v1.3</option>
+    <option value="https://aman-1923.github.io/github-pages/main/">Main</option>
+    <option value="https://aman-1923.github.io/github-pages/v1.1/">v1.1</option>
+    <option value="https://aman-1923.github.io/github-pages/v1.2/">v1.2</option>
+    <option value="https://aman-1923.github.io/github-pages/v1.3/">v1.3</option>
   </select>
 </div>
 
