--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
   const select = document.getElementById('version-select');
   const hostname = window.location.href;
 
-  if (hostname.includes("github-pages-v1.1")) select.value = "https://aman-1923.github.io/github-pages-v1.1/";
-  else if (hostname.includes("github-pages-v1.2")) select.value = "https://aman-1923.github.io/github-pages-v1.2/";
-  else if (hostname.includes("github-pages-v1.3")) select.value = "https://aman-1923.github.io/github-pages-v1.3/";
-  else select.value = "https://aman-1923.github.io/github-pages/";
+  if (hostname.includes("github-pages/v1.1")) select.value = "https://aman-1923.github.io/github-pages/v1.1/";
+  else if (hostname.includes("github-pages/v1.2")) select.value = "https://aman-1923.github.io/github-pages/v1.2/";
+  else if (hostname.includes("github-pages/v1.3")) select.value = "https://aman-1923.github.io/github-pages/v1.3/";
+  else select.value = "https://aman-1923.github.io/github-pages/main/";
 </script>
 
 </body>
