--- a/v1.1/index.html
+++ b/v1.1/index.html
@@ -23,7 +23,7 @@
   <select id="version-select" onchange="location = this.value;">
     <option value="https://aman-1923.github.io/github-pages/main/">Main</option>
     <option value="https://aman-1923.github.io/github-pages/v1.1/">v1.1</option>
-    <option value="https://aman-1923.github.io/github-pages/v1.2//">v1.2</option>
+    <option value="https://aman-1923.github.io/github-pages/v1.2/">v1.2</option>
     <option value="https://aman-1923.github.io/github-pages/v1.3/">v1.3</option>
   </select>
 </div>
